...
    return (
        <View style={styles.container}>
            <SwipeNavigation rightSwipeCallback={navigateRight}>
                <TimerSlider
                    settingsKey="workTimeLength"
                    style={{ marginBottom: 30 }}
                    text="Work duration"
                />
                <TimerSlider
                    settingsKey="breakTimeLength"
                    text="Break duration"
                    minimumValue={1}
                    maximumValue={20}
                />
            </SwipeNavigation>
            <ModalView />
        </View>
...
