...
        setShowModal(true)
    }
    const closeModal = () => {
        setShowModal(false)
    }
    return (
        <View testID="modal-view">
            <TouchableOpacity
                style={sytles.openModalButton}
                onPress={openModal}
            >
                <Feather name="menu" size={35} color={theme.colors.text} />
            </TouchableOpacity>
...
